--- a/podweb/app/src/main/static/style.css
+++ b/podweb/app/src/main/static/style.css
@@ -5,3 +5,23 @@
 .podcast {
 	@apply border-2 border-pink-500 m-3
 }
+
+button {
+	@apply bg-blue-200 hover:bg-blue-300 p-1 rounded-sm
+}
+
+h1 {
+	@apply text-4xl
+}
+
+h2 {
+	@apply text-3xl
+}
+
+h3 {
+	@apply text-2xl
+}
+
+h4 {
+	@apply text-xl
+}
