--- a/podweb/app/src/main/static/style.css
+++ b/podweb/app/src/main/static/style.css
@@ -11,15 +11,15 @@ button {
 }
 
 h1 {
-	@apply text-4xl
+	@apply text-4xl my-3
 }
 
 h2 {
-	@apply text-3xl
+	@apply text-3xl my-2
 }
 
 h3 {
-	@apply text-2xl
+	@apply text-2xl my-2
 }
 
 h4 {
