Move search bar to search page, refactor design, refactor with Episode.duration() format, fix search of blank value

--- a/podweb/app/src/main/static/style.css
+++ b/podweb/app/src/main/static/style.css
@@ -6,7 +6,7 @@
 	@apply border-2 border-pink-500 m-3
 }
 
-button {
+button, button[type=submit] {
 	@apply bg-blue-200 hover:bg-blue-300 p-1 rounded-sm
 }
 
